@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/configobj
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/configobj/ChangeLog,v 1.48 2014/04/08 01:07:45 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/configobj/ChangeLog,v 1.49 2014/04/12 05:06:25 radhermit Exp $
+
+*configobj-5.0.4 (12 Apr 2014)
+
+  12 Apr 2014; Tim Harder <radhermit@gentoo.org> +configobj-5.0.4.ebuild:
+  Version bump.
 
 *configobj-5.0.3 (08 Apr 2014)
 
